@startuml

title __CALENDER's Class Diagram__\n

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class ColorfulMonthView {
          - mRadius : int
          + ColorfulMonthView()
          # onPreviewHook()
          # onDrawSelected()
          # onDrawScheme()
          # onDrawText()
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class ColorfulWeekView {
          - mRadius : int
          + ColorfulWeekView()
          # onPreviewHook()
          # onDrawSelected()
          # onDrawScheme()
          # onDrawText()
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class MyWeekBar {
          + MyWeekBar()
          # setTextColor()
          # setTextSize()
          # onDateSelected()
          # onWeekStartChange()
          # getViewIndexByCalendar()
          # onMeasure()
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class SimpleMonthView {
          - mRadius : int
          + SimpleMonthView()
          # onPreviewHook()
          # onLoopStart()
          # onDrawSelected()
          # onDrawScheme()
          # onDrawText()
      }
    }
  }
  

  package com.shang.livedata {
    package com.shang.livedata.Calender {
      class SimpleWeekView {
          - mRadius : int
          + SimpleWeekView()
          # onPreviewHook()
          # onDrawSelected()
          # onDrawScheme()
          # onDrawText()
      }
    }
  }
  

  ColorfulMonthView -up-|> MonthView
  BaseSavedState -up-|> AbsSavedState
  ColorfulWeekView -up-|> WeekView
  BaseSavedState -up-|> AbsSavedState
  MyWeekBar -up-|> WeekBar
  LayoutParams -up-|> MarginLayoutParams
  MarginLayoutParams -up-|> LayoutParams
  BaseSavedState -up-|> AbsSavedState
  SimpleMonthView -up-|> MonthView
  BaseSavedState -up-|> AbsSavedState
  SimpleWeekView -up-|> WeekView
  BaseSavedState -up-|> AbsSavedState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
